--- a/iiCt/package.json
+++ b/iiCt/package.json
@@ -11,28 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.5",
-    "@angular/common": "~11.0.5",
-    "@angular/compiler": "~11.0.5",
-    "@angular/core": "~11.0.5",
+    "@angular/animations": "^11.2.9",
+    "@angular/common": "^11.2.9",
+    "@angular/compiler": "^11.2.9",
+    "@angular/core": "^11.2.9",
     "@angular/fire": "^6.1.4",
-    "@angular/forms": "~11.0.5",
-    "@angular/platform-browser": "~11.0.5",
-    "@angular/platform-browser-dynamic": "~11.0.5",
-    "@angular/router": "~11.0.5",
+    "@angular/forms": "^11.2.9",
+    "@angular/platform-browser": "^11.2.9",
+    "@angular/platform-browser-dynamic": "^11.2.9",
+    "@angular/router": "^11.2.9",
+    "@firebase/app": "^0.6.20",
+    "@firebase/app-types": "^0.6.2",
+    "@firebase/util": "^0.4.1",
     "bootstrap": "^3.4.1",
-    "firebase": "^8.2.3",
-    "rxjs": "~6.6.0",
+    "firebase": "^8.4.1",
+    "rxjs": "^6.6.7",
     "semantic-ui-css": "^2.4.1",
-    "tslib": "^2.0.0",
+    "tslib": "^2.2.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.5",
-    "@angular/cli": "~11.0.5",
-    "@angular/compiler-cli": "~11.0.5",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/cli": "^11.2.8",
+    "@angular/compiler-cli": "^11.2.9",
+    "@types/jasmine": "^3.6.9",
+    "@types/node": "^12.20.7",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -44,6 +47,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.7"
   }
 }
