--- a/iiCt/package.json
+++ b/iiCt/package.json
@@ -17,12 +17,14 @@
     "@angular/core": "^11.2.9",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "^11.2.9",
+    "@angular/localize": "^11.2.9",
     "@angular/platform-browser": "^11.2.9",
     "@angular/platform-browser-dynamic": "^11.2.9",
     "@angular/router": "^11.2.9",
     "@firebase/app": "^0.6.20",
     "@firebase/app-types": "^0.6.2",
     "@firebase/util": "^0.4.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "bootstrap": "^3.4.1",
     "firebase": "^8.4.1",
     "rxjs": "^6.6.7",
