--- a/iiCt/package.json
+++ b/iiCt/package.json
@@ -30,10 +30,11 @@
     "rxjs": "^6.6.7",
     "semantic-ui-css": "^2.4.1",
     "tslib": "^2.2.0",
+    "typescript": "^4.1.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular-devkit/build-angular": "^12.0.2",
     "@angular/cli": "^11.2.8",
     "@angular/compiler-cli": "^11.2.9",
     "@types/jasmine": "^3.6.9",
@@ -41,14 +42,13 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "^4.0.7"
+    "tslint": "~6.1.0"
   }
 }
